# drf-boilerplate

./: .gitignore  pyproject.toml
src/config/: settings.py  urls.py
src/core/utils/: constant.py
src/core/utils/exceptions/: exception.py  handler.py
src/users/: urls.py
src/users/controllers/: v1_jwt_sign_in_controller.py  v1_login_controller.py  v1_register_controller.py
src/users/controllers/swaggers/: __init__.py  user_swagger.py
src/users/migrations/: 0001_initial.py  0002_tokenstorage.py
src/users/models/: __init__.py  token.py  user.py
src/users/services/: v1_jwt_sign_in_service.py  v1_login_service.py  v1_register_service.py
